# SiAOD

./: LICENSE  Lab1.ipynb  Lab2.ipynb  Lab3.ipynb  Lab4.ipynb  Lab5.ipynb  README.md  lab 5.ipynb  pyproject.toml
Kurs/: kurs.ipynb  sales.csv  sales_report.csv  Курсовая Отчёт.docx
Lab1/: main.py
Lab2/: book.txt  file_example6.txt  main.py  output_file_example8.txt  sorted_book.txt  зашифрованное.txt  расшифрованное.txt
Lab3/: main.py
data/Lab2/: example_numbers7.txt  file_example8.txt  program_file.txt  program_file2.txt  sorted_book.txt
data/Lab3/: graph_matrix.txt
