[project]
name = "siaod-labs"
version = "0.1.0"
description = "University SiAOD labs and coursework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.0",
    "networkx>=3.3",
    "pandas>=2.2.0",
    
]

[tool.uv]
package = false

[project.optional-dependencies]
notebooks = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
